<resources>

    /* values */
    <string name="initial_search">garinichsan</string>

    /* User Interface */
    <string name="app_name">Github User</string>
    <string name="logo">Github App Logo</string>

    <string name="settings">Settings</string>
    <string name="user_profile">User Profile</string>
    <string name="favorite_user">Favorite User</string>

    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="following">Following </string>
    <plurals name="follower">
        <item quantity="zero">Follower</item>
        <item quantity="one">Follower</item>
        <item quantity="other">Followers</item>
    </plurals>
    <plurals name="repository">
        <item quantity="zero">Repository</item>
        <item quantity="one">Repository</item>
        <item quantity="other">Repositories</item>
    </plurals>

    <string name="search_hint">Enter username</string>
    <string name="search">Search</string>
    <string name="change_language_settings">Change language settings</string>
    <string name="favorite">Favorite</string>
    <string name="icon_notification">icon notification</string>
    <string name="reminder">Reminder</string>
    <string name="notification_time">09:00 AM</string>
    <string name="reminder_text">Github User Reminder at 09:00 AM</string>

</resources>